syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package post;

message PostModel {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.StringValue author_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.BoolValue is_promoted = 6;
  google.protobuf.Int64Value promotion_amount = 7;

  repeated google.protobuf.StringValue upvotes = 8;
  repeated google.protobuf.StringValue downvotes = 9;
  repeated google.protobuf.StringValue comments = 10;
  repeated google.protobuf.StringValue tags = 11;

  repeated google.protobuf.StringValue tron_transaction = 12;
  repeated google.protobuf.StringValue ethereum_transaction = 13;
  repeated google.protobuf.StringValue donations = 14;
  repeated google.protobuf.StringValue pictures = 15;
}

message PostForm {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.StringValue author_id = 3;
  google.protobuf.StringValue pictures = 4;
  google.protobuf.BoolValue is_promoted = 5;
  google.protobuf.Int64Value promotion_amount = 6;
  repeated google.protobuf.StringValue tags = 7;
}

message CommentForm {
  google.protobuf.StringValue author_id = 1;
  google.protobuf.StringValue post_id = 2;
  google.protobuf.StringValue content = 3;
}

message CommentModel {
  google.protobuf.StringValue _id = 1;
  google.protobuf.StringValue author_id = 2;
  google.protobuf.StringValue post_id = 3;

  repeated google.protobuf.StringValue upvotes = 4;
  repeated google.protobuf.StringValue downvotes = 5;
  repeated google.protobuf.StringValue subcomments = 6;

  google.protobuf.StringValue content = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.BoolValue was_edited = 10;

}

message Comments {
  repeated CommentModel comments = 1;
}

message GetByObjectId {
  google.protobuf.StringValue _id = 1;
}

message GetCommentsRequest {
  google.protobuf.Int32Value limit = 1;
  google.protobuf.Int32Value page = 2;
}

message GetUserPostsRequest {
  google.protobuf.StringValue user_id = 1;
  google.protobuf.Int32Value limit = 2;
  google.protobuf.Int32Value page = 3;
  google.protobuf.StringValue filter = 4;
  google.protobuf.StringValue match = 5;
}

message UpdateByObjectId {
  google.protobuf.StringValue _id = 1;
}

message DeleteByObjectId {
  google.protobuf.StringValue _id = 1;
}

message GetPostsRequest {
  repeated google.protobuf.StringValue _ids = 1;
  google.protobuf.Int32Value limit = 2;
  google.protobuf.Int32Value page = 3;
  google.protobuf.StringValue filter = 4;
  google.protobuf.StringValue match = 5;
}

service PostService {
  // CREATE & UPDATE & DELETE
  rpc CreatePost(PostForm) returns (PostModel);
  rpc UpdatePost(PostForm) returns (PostModel);
  rpc DeletePost(DeleteByObjectId) returns (google.protobuf.Empty);

  rpc CreateComment(CommentForm) returns (CommentModel);
  rpc UpdateComment(CommentForm) returns (CommentModel);
  rpc DeleteComment(DeleteByObjectId) returns (google.protobuf.Empty);
  // GET & FIND
  rpc GetPostById(GetByObjectId) returns (PostModel);
  rpc GetPost(GetPostsRequest) returns (stream PostModel);

  rpc GetPostComments(GetCommentsRequest) returns (stream Comments);

  rpc GetUserPosts(GetUserPostsRequest) returns (stream PostModel);
  // UPVOTE POST AND COMMENT
  rpc UpvotePost(UpdateByObjectId) returns (google.protobuf.Empty);
  rpc DownvotePost(UpdateByObjectId) returns (google.protobuf.Empty);

  rpc UpvoteComment(UpdateByObjectId) returns (google.protobuf.Empty);
  rpc DownvoteComment(UpdateByObjectId) returns (google.protobuf.Empty);
}
